tests/expectations/compiler/structs/inline_member_pass.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [EPAR0370009]: unexpected string: expected 'identifier', found 'let'
    --> compiler-test:8:19
     |
   8 |     function main(let x: u8, y: bool) -> bool {
     |                   ^^^"""]
